December 02 2020: Create Magento order right after receiving Moneris Receipt
December 02 2020: Use configured order status for captured transactions
December 08 2020: Update config code to ECNP-00494
December 15 2020: Support custom order status
December 16 2020: Fix empty/null order state issue