@@ -8,7 +8,7 @@
         "lib-libxml": "*"
     },
     "type": "magento2-module",
-    "version": "3.0.6",
+    "version": "3.0.7",
     "license": [
         "CH-1.0"
     ],
