@@ -1,14 +1,0 @@
- /**
- * Copyright © 2016 Collinsharper. All rights reserved.
- * See COPYING.txt for license details.
- */
-var config = {
-    map: {
-        '*': {
-            'Magento_Payment/js/model/credit-card-validation/credit-card-number-validator': 'Moneris_CreditCard/js/model/credit-card-number-validator',
-            'mage/validation': 'Moneris_CreditCard/js/mage/validation'
-        }
-    }
-};
-
-
