@@ -3,3 +3,4 @@ December 02 2020: Use configured order status for captured transactions
 December 08 2020: Update config code to ECNP-00494
 December 15 2020: Support custom order status
 December 16 2020: Fix empty/null order state issue
+Jan 26 2020: remove legacy js validator
